src/test/ui/issues/issue-6458-3.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-6458-3.rs:4:5
   |
LL |     mem::transmute(0);
   |     ^^^^^^^^^^^^^^ cannot infer type of the type parameter `U` declared on the function `transmute`
   |
help: consider specifying the generic arguments
   |
LL |     mem::transmute::<i32, U>(0);
   |                   ++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
